K8S_injector_demo/injector/deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cyberark-sidecar-injector
  labels:
    app: cyberark-sidecar-injector
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cyberark-sidecar-injector
    spec:
      containers:
        - name: cyberark-sidecar-injector
          image: cyberark/sidecar-injector:latest
          imagePullPolicy: IfNotPresent
          args:
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
            - -port=8080
            - -alsologtostderr
            - -v=4
            - 2>&1
          ports:
            - containerPort: 8080
              name: https
          volumeMounts:
            - name: certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: cyberark-sidecar-injector
