K8S_injector_demo/injector/deployment/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: cyberark-sidecar-injector
  labels:
    app: cyberark-sidecar-injector
webhooks:
  - name: sidecar-injector.cyberark.com
    clientConfig:
      service:
        name: cyberark-sidecar-injector
        namespace: injectors
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1Ea3hPREV6TXpNd04xb1hEVEk1TURreE5URXpNek13TjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVRECjY5M0ZiNFkzVmlaeGJpV3hqbExpZUZ4SWUxWUdkTW5ISHdUZm43cVlDU0Q3c0dpU2wrV3IrUStBOTdicjhQYngKcTFsTEI4Unl1T1hNTTdsR0UzTkFTUlR4ZlM1V1VIUGJZYXlhd0J2b1NxQU1iTEtka0dFWlZ6UWwwN0FGZjZXVQo3NXBNbzFTb2dw [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        cyberark-sidecar-injector: enabled
